fix: The SelectListFilter with no-border style has wrong font-size

--- a/src/catalog/components/RealtyFilters/blocks/SelectListFilter/selectListFilter.scss
+++ b/src/catalog/components/RealtyFilters/blocks/SelectListFilter/selectListFilter.scss
@@ -34,5 +34,6 @@
     border: none;
     padding-top: 0;
     padding-bottom: 0;
+    font-size: 14px;
   }
 }
